@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.8  Last change: 2015 Jul 09
+*vifm-app.txt*    For Vifm version 0.8  Last change: 2015 Jul 13
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -998,6 +998,7 @@ These commands see '|' as part of their arguments even when it's escaped:
     :qnoremap
     :vmap
     :vnoremap
+    :wincmd
     :windo
     :winrun
 
@@ -1951,6 +1952,9 @@ yet supported) and might be changed in future releases, or get an alias.
     split the window vertically to show both file directories.  Also changes
     other pane to the path (absolute or relative to current directory of active
     pane).
+
+:[count]winc[md] {arg}                         *vifm-:wincmd* *vifm-:winc*
+    same as running Ctrl-W [count] {arg}.
 
 :windo [command...]                            *vifm-:windo*
     execute command for each pane (same as :winrun % command).
