@@ -43,6 +43,7 @@ enum
 	COM_SYNC,
 	COM_LET,
 	COM_UNLET,
+	COM_WINCMD,
 	COM_WINDO,
 	COM_WINRUN,
 	COM_TOUCH,
